Update 1-Blog de Turismo/css/index.css
se agregan formatos iconos redes sociales

--- a/1-Blog de Turismo/css/index.css
+++ b/1-Blog de Turismo/css/index.css
@@ -25,6 +25,14 @@ body{
 .logo{
   height: 160px;
 }
+.left-sidebar ul{
+  border: none;
+}
+.left-sidebar i.fa{
+  padding: 8px;
+  font-size: 35px;
+  color:#444;
+}
 
 
 
