--- a/1-Blog de Turismo/css/index.css
+++ b/1-Blog de Turismo/css/index.css
@@ -27,12 +27,27 @@ body{
 }
 .left-sidebar ul{
   border: none;
+  background: none;
 }
 .left-sidebar i.fa{
   padding: 8px;
   font-size: 35px;
-  color:#444;
+  color: rgba(51, 153, 204, 1);
+  border: 1px solid black;
+  background: #FFFFFF;
+  border-radius: 8px;
 }
+.left-sidebar li{
+  padding: 15px;
+  margin:auto;
+}
+.collection-may{
+  background: none;
+ 
+  
+}
+
+
 
 
 
