Update 1-Blog de Turismo/css/index.css
se agregan todas las imagnes del blog

--- a/1-Blog de Turismo/css/index.css
+++ b/1-Blog de Turismo/css/index.css
@@ -43,8 +43,14 @@ body{
 }
 .collection-may{
   background: none;
- 
-  
+}
+.img-lat{
+  height: 500px;
+  width: 100%;
+}
+.img-cent{
+  height: 1000px;
+  width: 100%;
 }
 
 
