--- a/1-Blog de Turismo/css/index.css
+++ b/1-Blog de Turismo/css/index.css
@@ -7,11 +7,11 @@ body{
 }
 
 }
-.slogan{
+h3{
   padding: 3px;
   margin: auto;
   font-family: sans-serif;
-  font-size: 11px;
+  font-size: 31px !important;
 }
 .tip{
   border:1px solid black;
@@ -24,6 +24,7 @@ body{
 }
 .logo{
   height: 160px;
+  margin-top: 15px;
 }
 .left-sidebar ul{
   border: none;
