--- a/3-Blog de Musica/css/estilos.css
+++ b/3-Blog de Musica/css/estilos.css
@@ -1,15 +1,56 @@
 
 /* Clase para darle estilos a la barra de navegacion */
 .navbar-inverse {
-  background: rgba(51, 153, 204, 0.65);
+  background: #5bc0de;
   min-height: 10%;
   border: none;
 }
 /* Clase para darle estilos al logo de la pagina */
 .logo-img{
-  width: 10%;
+  width: 25%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
 }
 .tip{
   border: 1px solid black;
 }
-
+.red-social
+{
+  height: 180px;
+}
+.container{
+  margin-top: 185px;
+  width: 100%;
+  background: rgba(230, 184, 65, 0.85);
+}
+.botones{
+    margin:15px;
+}
+body{
+  background: #5bc0de;
+}
+.publicacion{
+  margin:5px;
+  padding: 5px;  
+  background: rgba(230, 184, 65, 0.85);
+  width: 100%;  
+}
+.buscador {
+  margin:5px;
+  padding: none;
+  background: rgba(230, 184, 65, 0.85);   
+}
+.opciones {
+  margin:5px;
+  padding:5px;  
+  background: rgba(230, 184, 65, 0.85); 
+}
+.base{
+  margin:5px;
+  padding: 3px;
+}
+.img-publi{
+  width: 100%;
+  height: auto;
+}
