--- a/3-Blog de Musica/css/estilos.css
+++ b/3-Blog de Musica/css/estilos.css
@@ -60,7 +60,12 @@ body{
   padding: 5px;
 }
 .img-social{
-  padding-top: 135px;
+  padding-top: 125px;
+  padding-left: 5px;
+  width: 8%;
+}
+nav{
+  margin-bottom: 0px;
 }
 
 
